Revise careers page content to emphasize global career opportunities and enhance engagement

--- a/careers.html
+++ b/careers.html
@@ -337,7 +337,7 @@
                                             </svg>
                                         </div>
                                     </div>
-                                    <h3 class="tp-section-title lts tp_fade_anim">Six reasons 9Yards is different from every other company in Uganda</h3>
+                                    <h3 class="tp-section-title lts tp_fade_anim">YOUR CAREER ON THE GLOBAL STAGE</h3>
                                 </div>
                             </div>
                         </div>
@@ -345,88 +345,38 @@
                             <div class="row gx-0">
                                 <div class="col-lg-4 col-md-6">
                                     <div class="tp-benefit-item tp-benefit-borber-bottom">
-                                        <div class="tp-benefit-item-icon pb-30">
-                                            <span><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none">
-                                                <rect x="2" y="2" width="18" height="18" rx="2" stroke="black" stroke-width="1.5"/>
-                                                <rect x="24" y="2" width="18" height="18" rx="2" stroke="black" stroke-width="1.5"/>
-                                                <rect x="2" y="24" width="18" height="18" rx="2" stroke="black" stroke-width="1.5"/>
-                                                <rect x="24" y="24" width="18" height="18" rx="2" stroke="black" stroke-width="1.5"/>
-                                                <line x1="20" y1="11" x2="24" y2="11" stroke="black" stroke-width="1.5"/>
-                                                <line x1="20" y1="33" x2="24" y2="33" stroke="black" stroke-width="1.5"/>
-                                                <line x1="11" y1="20" x2="11" y2="24" stroke="black" stroke-width="1.5"/>
-                                                <line x1="33" y1="20" x2="33" y2="24" stroke="black" stroke-width="1.5"/>
-                                            </svg></span>
-                                        </div>
-                                        <h4 class="tp-benefit-item-title">Work Across Multiple Industries</h4>
-                                        <p class="tp-benefit-item-desc mt-15">Forget boring, repetitive work. At 9Yards, you'll touch content creation, food delivery, and film production—sometimes all in the same week. This variety keeps work exciting, builds diverse skills, and gives you perspectives most people take years to develop.</p>
+                                        <h4 class="tp-benefit-item-title">Cross-Disciplinary Exposure</h4>
+                                        <p class="tp-benefit-item-desc mt-15">Forget boring, repetitive work. At 9Yards, you'll touch content creation, food delivery, and film production, sometimes all in the same week. This variety keeps work exciting, builds diverse skills, and gives you perspectives most people take years to develop.</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-6">
                                     <div class="tp-benefit-item tp-benefit-borber-bottom">
-                                        <div class="tp-benefit-item-icon pb-30">
-                                            <span><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none">
-                                                <path d="M22 6L26 18H38L28 26L32 38L22 30L12 38L16 26L6 18H18L22 6Z" stroke="black" stroke-width="1.5" stroke-linejoin="round"/>
-                                                <path d="M22 2V6M22 38V42M6 22H2M42 22H38M8 8L11 11M33 33L36 36M36 8L33 11M11 33L8 36" stroke="black" stroke-width="1.5" stroke-linecap="round"/>
-                                            </svg></span>
-                                        </div>
                                         <h4 class="tp-benefit-item-title">Learn & Grow Constantly</h4>
                                         <p class="tp-benefit-item-desc mt-15">Learn from experienced creative professionals who've worked with Uganda's top brands and artists. We invest in our team's development through mentorship, training, and real responsibility. You'll be contributing to actual projects from day one.</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-6">
                                     <div class="tp-benefit-item tp-benefit-borber-bottom">
-                                        <div class="tp-benefit-item-icon pb-30">
-                                            <span><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none">
-                                                <rect x="4" y="16" width="36" height="24" rx="2" stroke="black" stroke-width="1.5"/>
-                                                <path d="M12 16V10C12 6.68629 14.6863 4 18 4H26C29.3137 4 32 6.68629 32 10V16" stroke="black" stroke-width="1.5"/>
-                                                <circle cx="22" cy="28" r="4" stroke="black" stroke-width="1.5"/>
-                                                <line x1="22" y1="32" x2="22" y2="36" stroke="black" stroke-width="1.5"/>
-                                            </svg></span>
-                                        </div>
-                                        <h4 class="tp-benefit-item-title">Professional Facilities & Equipment</h4>
+                                        <h4 class="tp-benefit-item-title">World-Class Facilities</h4>
                                         <p class="tp-benefit-item-desc mt-15">Access Kampala's premier podcast studio, professional cameras and lighting, modern editing suites, and collaborative workspaces. We've invested in infrastructure that most companies in Uganda don't have. You'll work with tools that match international standards.</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-6">
                                     <div class="tp-benefit-item">
-                                        <div class="tp-benefit-item-icon pb-30">
-                                            <span><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none">
-                                                <path d="M22 40V28M22 28L14 36M22 28L30 36" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                                <path d="M16 22L22 4L28 22" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                                <path d="M12 16H32" stroke="black" stroke-width="1.5" stroke-linecap="round"/>
-                                                <circle cx="22" cy="24" r="4" stroke="black" stroke-width="1.5"/>
-                                            </svg></span>
-                                        </div>
-                                        <h4 class="tp-benefit-item-title">Real Career Growth Opportunities</h4>
-                                        <p class="tp-benefit-item-desc mt-15">We're expanding rapidly across East Africa. As we grow, you grow with us into leadership roles. We promote from within, reward performance, and create paths to management that actually exist—not vague promises. Your ceiling is as high as your ambition.</p>
+                                        <h4 class="tp-benefit-item-title">Real Growth Opportunities</h4>
+                                        <p class="tp-benefit-item-desc mt-15">We're expanding rapidly across East Africa. As we grow, you grow with us into leadership roles. We promote from within, reward performance, and create paths to management that actually exist, not vague promises. Your ceiling is as high as your ambition.</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-6">
                                     <div class="tp-benefit-item">
-                                        <div class="tp-benefit-item-icon pb-30">
-                                            <span><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none">
-                                                <path d="M22 4L26 14L22 12L18 14L22 4Z" stroke="black" stroke-width="1.5" stroke-linejoin="round"/>
-                                                <path d="M22 12V24" stroke="black" stroke-width="1.5"/>
-                                                <circle cx="12" cy="34" r="6" stroke="black" stroke-width="1.5"/>
-                                                <circle cx="32" cy="34" r="6" stroke="black" stroke-width="1.5"/>
-                                                <circle cx="22" cy="24" r="6" stroke="black" stroke-width="1.5"/>
-                                                <line x1="16" y1="30" x2="18" y2="28" stroke="black" stroke-width="1.5"/>
-                                                <line x1="28" y1="30" x2="26" y2="28" stroke="black" stroke-width="1.5"/>
-                                            </svg></span>
-                                        </div>
                                         <h4 class="tp-benefit-item-title">Young, Dynamic Culture</h4>
                                         <p class="tp-benefit-item-desc mt-15">We're a team of young, ambitious professionals who understand social media, Gen Z audiences, and where the industry is heading. No corporate bureaucracy. No outdated hierarchies. Just talented people working together, moving fast, and building something meaningful.</p>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-6">
                                     <div class="tp-benefit-item">
-                                        <div class="tp-benefit-item-icon pb-30">
-                                            <span><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none">
-                                                <polygon points="22,2 27,17 42,17 30,27 35,42 22,32 9,42 14,27 2,17 17,17" stroke="black" stroke-width="1.5" fill="none" stroke-linejoin="round"/>
-                                            </svg></span>
-                                        </div>
-                                        <h4 class="tp-benefit-item-title">Make an Industry Impact</h4>
-                                        <p class="tp-benefit-item-desc mt-15">Help elevate Uganda's creative industry to international standards. Every project you work on raises the bar for what's possible in East Africa. You're not just building a career—you're part of a movement proving that world-class creative work happens right here in Kampala.</p>
+                                        <h4 class="tp-benefit-item-title">Make An Industry Impact</h4>
+                                        <p class="tp-benefit-item-desc mt-15">Help elevate Uganda's creative industry to international standards. Every project you work on raises the bar for what's possible in East Africa. You're not just building a career, you're part of a movement proving that world-class creative work happens right here in Kampala.</p>
                                     </div>
                                 </div>
                             </div>
