--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <ul class="tp-submenu submenu">
                                     <li><a href="https://contenthouse.9yards.co.ug">9Yards Content House</a></li>
                                     <li><a href="https://food.9yards.co.ug">9Yards Food</a></li>
-                                    <li><a href="https://film.9yards.co.ug">9Yards Film</a></li>
+                                    <li><a href="#">9Yards Film</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -212,7 +212,7 @@
                                                             <span class="mega-menu-btn">Visit Site →</span>
                                                         </a>
                                                         <!-- 9Yards Film Column -->
-                                                        <a href="https://film.9yards.co.ug" class="mega-menu-column">
+                                                        <a href="#" class="mega-menu-column">
                                                             <div class="mega-menu-icon">
                                                                 <img src="assets/img/9Yards/mega-menu/film-menu.png" alt="9Yards Film">
                                                             </div>
@@ -504,12 +504,12 @@
                                     </div>
                                     <div class="col-xxl-5 col-xl-6 col-lg-7 col-md-7">
                                         <div class="tp-service-content">
-                                            <h4 class="tp-section-title"><a class="tp_text_invert" href="https://film.9yards.co.ug" target="_blank" rel="noopener noreferrer">9YARDS FILMS</a></h4>
+                                            <h4 class="tp-section-title"><a class="tp_text_invert" href="#" target="_blank" rel="noopener noreferrer">9YARDS FILMS</a></h4>
                                             <p>
                                                 We produce videos that tell compelling stories, from high-energy music videos to impactful corporate films. Our cinematic approach ensures your message isn't just seen, but felt.
                                             </p>
                                             <div class="tp-service-btn">
-                                                <a href="https://film.9yards.co.ug" class="tp-btn-yellow-green" target="_blank" rel="noopener noreferrer">
+                                                <a href="#" class="tp-btn-yellow-green" target="_blank" rel="noopener noreferrer">
                                                     <span>
                                                         <span class="text-1">View Our Work ↗</span>
                                                         <span class="text-2">View Our Work ↗</span>
@@ -692,7 +692,7 @@
                                             <ul>
                                                 <li><a href="https://contenthouse.9yards.co.ug" target="_blank" rel="noopener noreferrer">Content House</a></li>
                                                 <li><a href="https://food.9yards.co.ug" target="_blank" rel="noopener noreferrer">9Yards Food</a></li>
-                                                <li><a href="https://film.9yards.co.ug" target="_blank" rel="noopener noreferrer">9Yards Film</a></li>
+                                                <li><a href="#" target="_blank" rel="noopener noreferrer">9Yards Film</a></li>
                                             </ul>
                                         </div>
                                     </div>
