--- a/our-companies.html
+++ b/our-companies.html
@@ -101,7 +101,7 @@
                                 <ul class="tp-submenu submenu">
                                     <li><a href="https://contenthouse.9yards.co.ug">9Yards Content House</a></li>
                                     <li><a href="https://food.9yards.co.ug">9Yards Food</a></li>
-                                    <li><a href="https://film.9yards.co.ug">9Yards Film</a></li>
+                                    <li><a href="#">9Yards Film</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -224,7 +224,7 @@
                                                             <span class="mega-menu-btn">Visit Site →</span>
                                                         </a>
                                                         <!-- 9Yards Film Column -->
-                                                        <a href="https://film.9yards.co.ug" class="mega-menu-column">
+                                                        <a href="#" class="mega-menu-column">
                                                             <div class="mega-menu-icon">
                                                                 <img src="assets/img/9Yards/mega-menu/film-menu.png" alt="9Yards Film">
                                                             </div>
@@ -447,7 +447,7 @@
                                         </div>
                                     </div>
                                     <div class="col-12 col-lg-4 col-xl-4 mt-20 mt-lg-0">
-                                        <a href="https://film.9yards.co.ug" target="_blank" rel="noopener noreferrer" class="tp-btn-yellow-green">
+                                        <a href="#" target="_blank" rel="noopener noreferrer" class="tp-btn-yellow-green">
                                             <span>
                                                 <span class="text-1">View Our Work</span>
                                                 <span class="text-2">View Our Work</span>
@@ -552,7 +552,7 @@
                                             <ul>
                                                 <li><a href="https://contenthouse.9yards.co.ug" target="_blank" rel="noopener noreferrer">Content House</a></li>
                                                 <li><a href="https://food.9yards.co.ug" target="_blank" rel="noopener noreferrer">9Yards Food</a></li>
-                                                <li><a href="https://film.9yards.co.ug" target="_blank" rel="noopener noreferrer">9Yards Film</a></li>
+                                                <li><a href="#" target="_blank" rel="noopener noreferrer">9Yards Film</a></li>
                                             </ul>
                                         </div>
                                     </div>
