--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html class="no-js agntix-light" lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S60TB37865"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-S60TB37865');
+    </script>
     <meta charset="utf-8" />
     <meta name="google-site-verification" content="QDT0bvNomFsJHjx50qFwFZJc0MgLW_ULO3JolmgDxds" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
